--- a/style/index.css
+++ b/style/index.css
@@ -24,16 +24,17 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 /* General styles */
+
 * {
     box-sizing: border-box;
-    font-size: 1.2rem;
+    font-size:1.8rem;
 }
 h1{
     font-size: 5.6rem;
     color:white;
 }
 h2{
-    font-size: 2.6rem;
+    font-size: 3rem;
     color:maroon;
 }
 nav{
@@ -44,6 +45,7 @@ nav{
 .links{
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     width: 35%;
  
 }
@@ -52,6 +54,7 @@ nav{
     text-decoration: none;
     padding:2% 8%;
     color: maroon;
+    transition: 2s;
     
 }
 .links a:hover{
@@ -71,52 +74,107 @@ nav{
 #projects-button {
     padding:2% 8%;
     font-size: 1rem;
-    background-color: maroon;
-    
+    background-color: maroon;    
 }
+
 a{
     text-decoration: none;
     color: white;
 }
-.container{
+.row{
     display:flex;
+    justify-content: space-evenly;
     flex-wrap: wrap;
-    justify-content: space-between;
-    width: 100%;
+    padding: 2%;
 }
-.bg-img{
-    padding: 0;
-    width:25%;
-    margin: 2%;
-    height:20%;
-
-}
-.bg-img p{
+.portfolio-element{
     text-align: center;
-    font-size: 1.2rem;
-    
+    width: 30%;
+    margin: 2% 0;
 }
-.bg-img img{
-    max-width: 100%;
-    
-} 
+.portfolio-element p{
+    font-size: 1.2rem;  
+}
 
 
 footer{
-    display: flex;
+    display:flex;
     justify-items: center;
     flex-direction: column;
     background-color:grey;
     padding: 5%;
-    text-align: center;
+    text-align:center;
     
 }
-footer button,footer a{
-    padding:1%;
-    margin: 0% 35%;
+.footer-button{
+    padding:1% 0;
+    margin: 0% 43%;
     background-color: maroon;
+}
+
+
+/* media queries */
+
+@media(max-width: 500px){
+    nav{
+        flex-direction: column;
+        align-items: center;
+    }
+    .links {
+        flex-direction: column;
+    }
+    /* #about{
+      margin:0 2%;
+      text-align: center;
+    } */
+    .row{
+        flex-wrap: wrap;
+        align-items: center;
+    }
+    .portfolio-element {
+        width: 50%;
+        margin:2% 0;
+        padding:8%;
+    }
+    .portfolio-element img{
+        width: 90%;
+    }
+    
+    .footer-button{
+        padding:3% 9%;
+        margin:0 28%; 
+    }
 
 }
+
+@media(max-width: 800px){
+    nav{
+        flex-direction: column;
+        align-items: center;
+    }
+    .links {
+        flex-direction: column;
+    }
+    .row{
+        flex-wrap: wrap;
+        align-items: center;
+    }
+    .portfolio-element {
+        width: 50%;
+        margin:2% 0;
+        padding:8%;
+    }
+    .portfolio-element img{
+        width: 100%;
+    }
+    
+    .footer-button{
+        padding:3% 9%;
+        margin:0 28%; 
+    } 
+
+}
+
 
 
 
